--- a/html/home.html
+++ b/html/home.html
@@ -69,7 +69,7 @@
               <a class="nav-link" href="/html/busqueda.html">Búsqueda</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Cargar</a>
+              <a class="nav-link" href="/html/cargar.html">Cargar</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/html/nosotros.html">Nosotros</a>
