--- a/html/micuenta.html
+++ b/html/micuenta.html
@@ -13,7 +13,8 @@
       integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/css/style.css" />
+    <!-- <link rel="stylesheet" href="/css/style.css" /> -->
+    <link rel="stylesheet" href="/css/micuenta.css">
     <!--EMAIL JS-->
 
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
@@ -156,66 +157,88 @@
    <!--Fin de modal suscripción-->
   <!--Inicio seccion mi cuenta-->
   <main>
-    <section>
-        <div class="container mt-5">
-          <div class="row">
-            <div class="col col-md-6">
-                <h2 class="card-header">MI CUENTA</h2>
-              <div class="card">
-                <div class="card-body">
-                  <form
-                    onsubmit="guardarCambios(event)"
-                    class="needs-validation"
-                    novalidate
-                  >
-                    <div class="form-group">
-                      <label>Nombre</label>
-                      <input
-                        type="text"
-                        class="form-control"
-                        name="nombre"
-                        id="nombre"
-                        onchange="actualizar(event)"
-                      />
-                    </div>
-                    <div class="form-group">
-                      <label>Email</label>
-                      <input
-                        type="email"
-                        class="form-control"
-                        name="email"
-                        id="userEmail"
-                        onchange="actualizar(event)"
-                      />
-                    </div>
-                    <div class="form-group">
-                      <label>Teléfono</label>
-                      <input
-                        type="phone"
-                        class="form-control"
-                        name="telefono"
-                        required
-                        onchange="actualizar(event)"
-                      />
-                    </div>
-                    <div class="form-group">
-                      <label>Nacionalidad</label>
-                      <input
-                        type="text"
-                        class="form-control"
-                        name="nacionalidad"
-                        onchange="actualizar(event)"
-                      />
-                    </div>
-
-                    <button class="btn btn-info" id="btnSubmit">Guardar</button>
-                  </form>
+    <form class= "needs-validation" onsubmit="handleSubmit(event)" novalidate>
+      <div class="container">
+        <div class="row gutters">
+        <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-12">
+        <div class="card h-100">
+          <div class="card-body">
+            <div class="config-micuenta">
+              <div class="perfil-usuario">
+                <div class="avatar-usuario">
+                  <img class="
+                  img_perfil" src="" alt="..." name='img_perfil' onchange="handleChange(event)" required>
+                </div>
+                <h5 class="nombre-usuario"></h5>
+                <h6 class="email-usuario"></h6>
+              </div>
+            </div>
+          </div>
+        </div>
+        </div>
+        <div class="col-xl-9 col-lg-9 col-md-12 col-sm-12 col-12">
+        <div class="card h-100">
+          <div class="card-body">
+            <div class="row gutters">
+              <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                <h2 class="mb-2 text-success">Mi cuenta</h2>
+              </div>
+              <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+                <div class="form-group">
+                  <label for="nombrecompleto">Nombre completo</label>
+                  <input type="text" class="form-control" id="nombreCompleto"
+                  name="nombre"
+                  onchange="handleChange(event)" required>
+                </div>
+              </div>
+              <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+                <div class="form-group">
+                  <label for="eMail">Email</label>
+                  <input type="email" class="form-control" id="email" name= 'email'
+                  placeholder="Ingrese email"
+                  onchange="handleChange(event)" required>
+                </div>
+              </div>
+              <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+                <div class="form-group">
+                  <label for="alquileres">Alquileres</label>
+                  <input type="text" class="form-control" id="alquileres" name= 'alquileres' placeholder="libro 1, libro 2">
+                </div>
+              </div>
+            </div>
+            <div class="row gutters">
+              <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                <h6 class="mt-3 mb-2 text-success">Cambiar contraseña</h6>
+              </div>
+              <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+                <div class="form-group">
+                  <label for="contraseniaActual">Contraseña Actual</label>
+                  <input type="password" class="form-control" id="contrasenia">
+                </div>
+              </div>
+              <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+                <div class="form-group">
+                  <label for="contraseniaNueva">Contraseña Nueva</label>
+                  <input type="password" class="form-control" id="contraseniaNueva"
+                  name=contraseniaNueva placeholder="******"
+                  onchange="handleChange(event)" required>
+                </div>
+              </div>
+            </div>
+            <div class="row gutters">
+              <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                <div class="text-right">
+                  <button type="button" id="cancelar" name="Cancelar" class="btn btn-success">Cancelar</button>
+                  <button type="button" id="submit" name="submit" class="btn btn-success" onsubmit="handleSubmit(event)">Actualizar</button>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </section>
+        </div>
+        </div>
+        </div>
+      </form>
   </main>
   <footer></footer>
   
