--- a/html/login.html
+++ b/html/login.html
@@ -14,7 +14,11 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/css/login.css" />
-
+    <link
+    rel="stylesheet"
+    href="/css/screen480.css"
+    media="screen and (min-width:480px)"
+  />
     <title>Login</title>
   </head>
   <body id="loginBody">
@@ -86,7 +90,7 @@
                 data-target="#exampleModal"
                 id="susBtn"
               >
-                Subscríbete
+                Suscríbete
               </button>
             </ul>
           </div>
@@ -170,6 +174,7 @@
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
       crossorigin="anonymous"
     ></script>
+    <script src="https://use.fontawesome.com/823835b326.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
