--- a/html/registro.html
+++ b/html/registro.html
@@ -42,69 +42,70 @@ emailjs.init("user_s7HwAahidzc2rhmV4pspv");
             aria-label="Toggle navigation"
           >
           <img id="logoNav" src="/img/biblioteca-01.png" alt="logo biblioteca"></button>
-          <div
-            class="collapse navbar-collapse justify-content-start gaNavCol"
-            id="navbarNav"
-          >
-            <ul class="navbar-nav" id="gaLista">
-              <li class="nav-item gaItem">
-                <a class="nav-link" id="sesBoton" href="/html/login.html"
-                  ><i class="fa fa-user fa-2x" aria-hidden="true"
-                    ></i
-                  ></a
-                >
-              </li>
-              <li class="nav-item gaItem" id="usuarioBoton">
-                <a
-                  class="nav-link"
-                  href="/html/micuenta.html"
-                  id="perfLink"
-                ></a>
-              </li>
-              <li class="nav-item gaItem" id="cerrarBoton">
+          <div class="col-12">
+            <div
+              class="collapse navbar-collapse justify-content-start gaNavCol"
+              id="navbarNav"
+            >
+              <ul class="navbar-nav" id="gaLista">
+                <li class="nav-item gaItem">
+                  <a class="nav-link" id="sesBoton" href="/html/login.html"
+                    ><i class="fa fa-user fa-2x" aria-hidden="true"
+                      ></i
+                    ></a
+                  >
+                </li>
+                <li class="nav-item gaItem" id="usuarioBoton">
+                  <a
+                    class="nav-link"
+                    href="/html/micuenta.html"
+                    id="perfLink"
+                  ></a>
+                </li>
+                <li class="nav-item gaItem" id="cerrarBoton">
+                  <button
+                    class="btn-danger"
+                    id="cerrarLink"
+                    onclick="cerrarSesion()"
+                  >
+                    x
+                  </button>
+                </li>
+                <li class="nav-item activado gaItem">
+                  <a class="nav-link" href="#"
+                    >Inicio <span class="sr-only">(current)</span></a
+                  >
+                </li>
+                <li class="nav-item gaItem">
+                  <a class="nav-link" href="/html/busqueda.html">Búsqueda</a>
+                </li>
+                <li class="nav-item gaItem">
+                  <a class="nav-link" href="#">Cargar</a>
+                </li>
+                <li class="nav-item gaItem">
+                  <a class="nav-link" href="/html/nosotros.html">Nosotros</a>
+                </li>
+                <li class="nav-item gaItem">
+                  <a class="nav-link" href="/html/contacto.html">Contacto</a>
+                </li>
                 <button
-                  class="btn-danger"
-                  id="cerrarLink"
-                  onclick="cerrarSesion()"
+                  type="button"
+                  class="btn btn-success btn-sm mb-5"
+                  data-toggle="modal"
+                  data-target="#exampleModal"
+                  id="susBtn"
                 >
-                  x
+                  Suscríbete
                 </button>
-              </li>
-              <li class="nav-item activado gaItem">
-                <a class="nav-link" href="#"
-                  >Inicio <span class="sr-only">(current)</span></a
-                >
-              </li>
-
-              <li class="nav-item gaItem">
-                <a class="nav-link" href="/html/busqueda.html">Búsqueda</a>
-              </li>
-              <li class="nav-item gaItem">
-                <a class="nav-link" href="#">Cargar</a>
-              </li>
-              <li class="nav-item gaItem">
-                <a class="nav-link" href="/html/nosotros.html">Nosotros</a>
-              </li>
-              <li class="nav-item gaItem">
-                <a class="nav-link" href="/html/contacto.html">Contacto</a>
-              </li>
-              <button
-                type="button"
-                class="btn btn-success btn-sm mb-5"
-                data-toggle="modal"
-                data-target="#exampleModal"
-                id="susBtn"
-              >
-                Subscríbete
-              </button>
-            </ul>
+              </ul>
+            </div>
           </div>
         </div>
         <a
           class="navbar-brand font-weight-bold justify-content-end d-none d-md-block"
           id="logonav"
           href="#"
-          ><img id="logoNav" src="/img/biblioteca-01.png" alt="logo biblioteca"></a
+          ><img id="logoNavG" src="/img/biblioteca-01.png" alt="logo biblioteca"></a
         >
       </nav>
     </header>
@@ -113,7 +114,7 @@ emailjs.init("user_s7HwAahidzc2rhmV4pspv");
         <div class="container mt-5 ">
           
           <div class="row justify-content-center">
-            <div class="col-md-6 col-lg-4 mt-3 divRegis">
+            <div class="col-md-6 col-lg-4 mt-5 divRegis d-block">
               <div class="login-wrap p-0">
                 <h2 class="regisTitulo mb-3 text-center">Registro de usuario</h2>
                   <form
