--- a/html/busqueda.html
+++ b/html/busqueda.html
@@ -69,13 +69,13 @@
                   </div>
                              </li>
                 
-                <li class="nav-item activado gaItem">
-                  <a class="nav-link" href="#"
-                    >Inicio <span class="sr-only">(current)</span></a
+                <li class="nav-item  gaItem">
+                  <a class="nav-link" href="/html/home.html"
+                    >Inicio </a
                   >
                 </li>
-                <li class="nav-item gaItem">
-                  <a class="nav-link" href="/html/busqueda.html">Búsqueda</a>
+                <li class="nav-item activado gaItem">
+                  <a class="nav-link" href="/html/busqueda.html">Búsqueda<span class="sr-only">(current)</span></a>
                 </li>
                 
                 <li class="nav-item gaItem">
@@ -85,7 +85,7 @@
                   <a class="nav-link" href="/html/contacto.html">Contacto</a>
                 </li>
                 <li class="nav-item gaItem soloAdmin">
-                  <a class="nav-link soloAdmin"  href="#">Cargar</a>
+                  <a class="nav-link soloAdmin"  href="/html/cargar.html">Cargar</a>
                 </li>
                 <button
                   type="button"
