--- a/html/home.html
+++ b/html/home.html
@@ -90,7 +90,7 @@
                   <a class="nav-link" href="/html/contacto.html">Contacto</a>
                 </li>
                 <li class="nav-item gaItem soloAdmin">
-                  <a class="nav-link soloAdmin"  href="#">Cargar</a>
+                  <a class="nav-link soloAdmin"  href="/html/cargar.html">Cargar</a>
                 </li>
                 <button
                   type="button"
