--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -64,21 +64,21 @@
                 
                 <li class="nav-item activado gaItem">
                   <a class="nav-link" href="#"
-                    >Inicio <span class="sr-only">(current)</span></a
+                    >Inicio </a
                   >
                 </li>
                 <li class="nav-item gaItem">
                   <a class="nav-link" href="/html/busqueda.html">Búsqueda</a>
                 </li>
                 
-                <li class="nav-item gaItem">
-                  <a class="nav-link" href="/html/nosotros.html">Nosotros</a>
+                <li class="nav-item activado gaItem">
+                  <a class="nav-link" href="#">Nosotros<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item gaItem">
                   <a class="nav-link" href="/html/contacto.html">Contacto</a>
                 </li>
                 <li class="nav-item gaItem soloAdmin">
-                  <a class="nav-link soloAdmin"  href="#">Cargar</a>
+                  <a class="nav-link soloAdmin"  href="/html/cargar.html">Cargar</a>
                 </li>
                 <button
                   type="button"
